<resources>
    <string name="app_name">ComicCollector</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="charater">Character</string>
    <string name="volume">Volume</string>
    <string name="issue">Issue</string>

    <string name="cancel">Cancel</string>

    <!-- Main Setting headers -->
    <string name="main_setting_general">General</string>
    <string name="main_setting_search">Search Options</string>
    <string name="main_setting_rip_list">Collection List</string>
    <string name="main_setting_export">Export</string>
    <string name="main_setting_backup">Backup</string>

    <!-- General settings -->
    <string name="general_key_title">ComicVine API key</string>
    <string name="general_key_summary">Your api key gotten from https://comicvine.gamespot.com/api/</string>

    <string name="general_start_title">Update data on start</string>
    <string name="general_start_summary">On application start update the comic list</string>

    <string name="general_update_title">Update data on Collection list update</string>
    <string name="general_update_summary">On update of collection list update the comic list</string>

    <!-- Search Settings -->
    <string name="search_case_title">Case Sensitive</string>
    <string name="search_case_summary">Have searches be case sensitive</string>

    <string name="search_volume_title">Volume Search</string>
<<<<<<< HEAD
    <string name="search_volume_name_title">Name</string>
    <string name="search_volume_date_title">Start Year</string>

    <string name="search_issue_title">Volume Search</string>
    <string name="search_issue_num_title">Issue Number</string>
    <string name="search_issue_name_title">Name</string>
    <string name="search_issue_date_title">Start Year</string>

    <!--<string-array name="search_volume_values">
=======
    <string name="search_volume_summary">What part of volumes should be searched</string>

    <string-array name="search_volume_values">
>>>>>>> origin/master
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="search_volume_entries">
        <item>Name</item>
        <item>Start Year</item>
    </string-array>

    <string-array name="search_volume_default">
        <item>0</item>
        <item>1</item>
    </string-array>


    <string name="search_comic_title">Issues Search</string>
    <string name="search_comic_summary">What part of issues should be searched</string>

    <string-array name="search_comic_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="search_comic_entries">
        <item>Issue Number</item>
        <item>Name</item>
        <item>Date</item>
    </string-array>

    <string-array name="search_comic_default">
        <item>0</item>
<<<<<<< HEAD
    </string-array>-->
=======
    </string-array>

>>>>>>> origin/master

</resources>
