<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="case_sensitive_search"
        android:title="@string/search_case_title"
        android:summary="@string/search_case_summary"/>

    <PreferenceCategory
        android:title="@string/search_volume_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="search_volume_name"
            android:title="@string/search_volume_name_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="search_volume_date"
            android:title="@string/search_volume_date_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/search_issue_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="search_issue_num"
            android:title="@string/search_issue_num_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="search_issue_name"
            android:title="@string/search_issue_name_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="search_issue_date"
            android:title="@string/search_issue_date_title" />
    </PreferenceCategory>

</PreferenceScreen>
