<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="API_KEY"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/general_key_summary"
        android:title="@string/general_key_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="auto_pull_start"
        android:summary="@string/general_start_summary"
        android:title="@string/general_start_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="auto_pull_update"
        android:summary="@string/general_update_summary"
        android:title="@string/general_update_title"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="image_cache"
        android:summary="@string/general_image_cache_summary"
        android:title="@string/general_image_cache_title"/>

</PreferenceScreen>
